--- a/src/Benchmarks/analysis/perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/perf_comparison.ipynb
@@ -148,9 +148,7 @@
    "source": [
     "for fold in folds:\n",
     "    summary_loc = build_path(dataset_name, model_name, fold)\n",
-    "    get_best_metrics(summary_loc, fold, result_dict, perf_metrics, criteria)\n",
-    "\n",
-    "result_dict"
+    "    get_best_metrics(summary_loc, fold, result_dict, perf_metrics, criteria)"
    ],
    "id": "2ad9b65c9343b8a",
    "outputs": [
@@ -259,14 +257,6 @@
    "id": "fc27df79ebe45a98",
    "outputs": [],
    "execution_count": 9
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "source": "",
-   "id": "2f7c10ce0010b44f",
-   "outputs": [],
-   "execution_count": null
   }
  ],
  "metadata": {
