--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T14:18:49.109681Z",
-     "start_time": "2024-08-01T14:18:48.697426Z"
+     "end_time": "2024-08-06T05:44:49.098267Z",
+     "start_time": "2024-08-06T05:44:49.094351Z"
     }
    },
    "cell_type": "code",
@@ -21,17 +21,8 @@
     "from scipy import stats"
    ],
    "id": "7749ec064416a5a8",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/lib/python3/dist-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.17.3 and <1.25.0 is required for this version of SciPy (detected version 1.25.1\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "metadata": {},
@@ -42,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T14:18:49.115969Z",
-     "start_time": "2024-08-01T14:18:49.111174Z"
+     "end_time": "2024-08-06T05:44:49.147458Z",
+     "start_time": "2024-08-06T05:44:49.143740Z"
     }
    },
    "cell_type": "code",
@@ -54,19 +45,19 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T14:18:49.134555Z",
-     "start_time": "2024-08-01T14:18:49.119208Z"
+     "end_time": "2024-08-06T05:44:49.181585Z",
+     "start_time": "2024-08-06T05:44:49.176823Z"
     }
    },
    "cell_type": "code",
    "source": [
     "current_dir = os.getcwd()\n",
-    "dataset_name = \"NucleiSeg\"\n",
+    "dataset_name = \"kvasir\"\n",
     "model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
@@ -75,13 +66,13 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T14:18:49.158406Z",
-     "start_time": "2024-08-01T14:18:49.135714Z"
+     "end_time": "2024-08-06T05:44:49.197454Z",
+     "start_time": "2024-08-06T05:44:49.188220Z"
     }
    },
    "cell_type": "code",
@@ -107,13 +98,13 @@
    ],
    "id": "a617eb0c83072f4c",
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T14:18:49.171062Z",
-     "start_time": "2024-08-01T14:18:49.161022Z"
+     "end_time": "2024-08-06T05:44:49.220160Z",
+     "start_time": "2024-08-06T05:44:49.215914Z"
     }
    },
    "cell_type": "code",
@@ -134,13 +125,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-01T14:18:49.207936Z",
-     "start_time": "2024-08-01T14:18:49.172883Z"
+     "end_time": "2024-08-06T05:44:49.267325Z",
+     "start_time": "2024-08-06T05:44:49.242175Z"
     }
    },
    "cell_type": "code",
@@ -176,25 +167,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/NucleiSeg/UNet_e2cnn/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 12
   }
  ],
  "metadata": {
