--- a/src/Benchmarks/preprocessing/PREPROCESSING_COCO.ipynb
+++ b/src/Benchmarks/preprocessing/PREPROCESSING_COCO.ipynb
@@ -669,12 +669,127 @@
    "execution_count": 6
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-14T08:45:47.913496Z",
+     "start_time": "2024-08-14T08:45:47.905132Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "unique_category_ids",
+   "id": "681f6d43f615fdd9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{92,\n",
+       " 93,\n",
+       " 94,\n",
+       " 95,\n",
+       " 96,\n",
+       " 97,\n",
+       " 98,\n",
+       " 99,\n",
+       " 100,\n",
+       " 101,\n",
+       " 102,\n",
+       " 103,\n",
+       " 104,\n",
+       " 105,\n",
+       " 106,\n",
+       " 107,\n",
+       " 108,\n",
+       " 109,\n",
+       " 110,\n",
+       " 111,\n",
+       " 112,\n",
+       " 113,\n",
+       " 114,\n",
+       " 115,\n",
+       " 116,\n",
+       " 117,\n",
+       " 118,\n",
+       " 119,\n",
+       " 120,\n",
+       " 121,\n",
+       " 122,\n",
+       " 123,\n",
+       " 124,\n",
+       " 125,\n",
+       " 126,\n",
+       " 127,\n",
+       " 128,\n",
+       " 129,\n",
+       " 130,\n",
+       " 131,\n",
+       " 132,\n",
+       " 133,\n",
+       " 134,\n",
+       " 135,\n",
+       " 136,\n",
+       " 137,\n",
+       " 138,\n",
+       " 139,\n",
+       " 140,\n",
+       " 141,\n",
+       " 142,\n",
+       " 143,\n",
+       " 144,\n",
+       " 145,\n",
+       " 146,\n",
+       " 147,\n",
+       " 148,\n",
+       " 149,\n",
+       " 150,\n",
+       " 151,\n",
+       " 152,\n",
+       " 153,\n",
+       " 154,\n",
+       " 155,\n",
+       " 156,\n",
+       " 157,\n",
+       " 158,\n",
+       " 159,\n",
+       " 160,\n",
+       " 161,\n",
+       " 162,\n",
+       " 163,\n",
+       " 164,\n",
+       " 165,\n",
+       " 166,\n",
+       " 167,\n",
+       " 168,\n",
+       " 169,\n",
+       " 170,\n",
+       " 171,\n",
+       " 172,\n",
+       " 173,\n",
+       " 174,\n",
+       " 175,\n",
+       " 176,\n",
+       " 177,\n",
+       " 178,\n",
+       " 179,\n",
+       " 180,\n",
+       " 181,\n",
+       " 182,\n",
+       " 183}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 7
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "681f6d43f615fdd9"
+   "id": "353fd63c2a4ddc92"
   }
  ],
  "metadata": {
