--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T05:44:49.098267Z",
-     "start_time": "2024-08-06T05:44:49.094351Z"
+     "end_time": "2024-08-21T06:34:15.508636Z",
+     "start_time": "2024-08-21T06:34:14.894045Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 1
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T05:44:49.147458Z",
-     "start_time": "2024-08-06T05:44:49.143740Z"
+     "end_time": "2024-08-21T06:34:41.005610Z",
+     "start_time": "2024-08-21T06:34:41.001614Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T05:44:49.181585Z",
-     "start_time": "2024-08-06T05:44:49.176823Z"
+     "end_time": "2024-08-21T06:34:45.401390Z",
+     "start_time": "2024-08-21T06:34:45.397062Z"
     }
    },
    "cell_type": "code",
@@ -66,22 +66,24 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T05:44:49.197454Z",
-     "start_time": "2024-08-06T05:44:49.188220Z"
+     "end_time": "2024-08-21T06:53:23.689335Z",
+     "start_time": "2024-08-21T06:53:23.684715Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def get_best_metrics(summary_loc: str, fold_nb: int, result_dict: dict, \n",
-    "                     perf_metrics: list, criteria: str) -> None:\n",
+    "                     perf_metrics: list, criteria: str, num_params: int) -> int:\n",
     "    with open(summary_loc) as file:\n",
     "        data = json.load(file)\n",
     "        \n",
+    "    if num_params == 0:\n",
+    "        num_params = data['n_params']\n",
     "    data = data['test']\n",
     "\n",
     "    best_idx = np.argmin(data[criteria])\n",
@@ -94,17 +96,19 @@
     "    if fold_nb in result_dict:\n",
     "        raise KeyError(f\"Key '{fold_nb}' already present in dictionary.\")\n",
     "    \n",
-    "    result_dict[fold_nb] = fold_dict"
+    "    result_dict[fold_nb] = fold_dict\n",
+    "    \n",
+    "    return num_params"
    ],
    "id": "a617eb0c83072f4c",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T05:44:49.220160Z",
-     "start_time": "2024-08-06T05:44:49.215914Z"
+     "end_time": "2024-08-21T06:53:23.899187Z",
+     "start_time": "2024-08-21T06:53:23.893714Z"
     }
    },
    "cell_type": "code",
@@ -125,30 +129,31 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-06T05:44:49.267325Z",
-     "start_time": "2024-08-06T05:44:49.242175Z"
+     "end_time": "2024-08-21T06:53:38.247541Z",
+     "start_time": "2024-08-21T06:53:38.215263Z"
     }
    },
    "cell_type": "code",
    "source": [
     "for model_name in model_names:\n",
     "    result_dict: dict = {}\n",
-    "\n",
+    "    num_params: int = 0\n",
+    "    \n",
     "    for fold in folds:\n",
     "        summary_loc = build_path(dataset_name, model_name, fold)\n",
-    "        get_best_metrics(summary_loc, fold, result_dict, perf_metrics, criteria)\n",
+    "        num_params = get_best_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params)\n",
     "        \n",
-    "    results = {}\n",
-    "    \n",
+    "    results = {'num_params': num_params}\n",
+    "\n",
     "    for metric in perf_metrics:\n",
     "        data = np.array([result_dict[f\"fold_{i}\"][metric] for i in range(5)])\n",
     "        mean = np.mean(data)\n",
-    "        ci = stats.t.interval(alpha=0.95, df=len(data)-1, loc=np.mean(data), scale=stats.sem(data))\n",
+    "        ci = stats.t.interval(confidence=0.95, df=len(data)-1, loc=np.mean(data), scale=stats.sem(data))\n",
     "        results[metric] = {\n",
     "            \"mean\": mean,\n",
     "            \"95% CI\": ci\n",
@@ -159,7 +164,9 @@
     "    \n",
     "    json_name = f'/{dataset_name}_{model_name}_data.json'\n",
     "    with open(f'{output_path}{json_name}', 'w') as fp:\n",
-    "        json.dump(results, fp, default=str, indent=4)"
+    "        json.dump(results, fp, default=str, indent=4)\n",
+    "        \n",
+    "        "
    ],
    "id": "2ad9b65c9343b8a",
    "outputs": [
@@ -185,7 +192,15 @@
      ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 15
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "a2bcdd5d162aca6f"
   }
  ],
  "metadata": {
