--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-21T06:34:15.508636Z",
-     "start_time": "2024-08-21T06:34:14.894045Z"
+     "end_time": "2024-08-22T06:39:15.748839Z",
+     "start_time": "2024-08-22T06:39:15.745236Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 13
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-21T06:34:41.005610Z",
-     "start_time": "2024-08-21T06:34:41.001614Z"
+     "end_time": "2024-08-22T06:39:15.802985Z",
+     "start_time": "2024-08-22T06:39:15.799168Z"
     }
    },
    "cell_type": "code",
@@ -45,34 +45,38 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 14
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-21T06:34:45.401390Z",
-     "start_time": "2024-08-21T06:34:45.397062Z"
+     "end_time": "2024-08-22T06:39:15.852418Z",
+     "start_time": "2024-08-22T06:39:15.847457Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "root_dir = '/home/rob/Documents/3_projects/bench/_results/small_models'\n",
+    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/small_models'\n",
+    "os.makedirs(output_dir_base_path, exist_ok=True)\n",
+    "\n",
     "current_dir = os.getcwd()\n",
     "dataset_name = \"kvasir\"\n",
     "model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "criteria = 'loss_dice'\n",
-    "perf_metrics = ['dice_score', 'IoU_score', 'precision', 'recall', 'accuracy']"
+    "perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-21T06:53:23.689335Z",
-     "start_time": "2024-08-21T06:53:23.684715Z"
+     "end_time": "2024-08-22T06:39:15.920546Z",
+     "start_time": "2024-08-22T06:39:15.915359Z"
     }
    },
    "cell_type": "code",
@@ -102,13 +106,13 @@
    ],
    "id": "a617eb0c83072f4c",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-21T06:53:23.899187Z",
-     "start_time": "2024-08-21T06:53:23.893714Z"
+     "end_time": "2024-08-22T06:39:15.971600Z",
+     "start_time": "2024-08-22T06:39:15.968008Z"
     }
    },
    "cell_type": "code",
@@ -129,13 +133,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 17
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-21T06:53:38.247541Z",
-     "start_time": "2024-08-21T06:53:38.215263Z"
+     "end_time": "2024-08-22T06:39:16.050875Z",
+     "start_time": "2024-08-22T06:39:16.020486Z"
     }
    },
    "cell_type": "code",
@@ -145,7 +149,7 @@
     "    num_params: int = 0\n",
     "    \n",
     "    for fold in folds:\n",
-    "        summary_loc = build_path(dataset_name, model_name, fold)\n",
+    "        summary_loc = build_path(dataset_name, model_name, fold, root_dir=root_dir)\n",
     "        num_params = get_best_metrics(summary_loc, fold, result_dict, perf_metrics, criteria, num_params)\n",
     "        \n",
     "    results = {'num_params': num_params}\n",
@@ -159,7 +163,7 @@
     "            \"95% CI\": ci\n",
     "        }\n",
     "        \n",
-    "    output_path = f'/home/rob/Documents/3_projects/bench/analysis/{dataset_name}'\n",
+    "    output_path = os.path.join(output_dir_base_path, dataset_name)\n",
     "    os.makedirs(output_path, exist_ok=True)\n",
     "    \n",
     "    json_name = f'/{dataset_name}_{model_name}_data.json'\n",
@@ -174,33 +178,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/kvasir/UNet_e2cnn/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 15
+   "execution_count": 18
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-22T06:39:16.085871Z",
+     "start_time": "2024-08-22T06:39:16.083933Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "a2bcdd5d162aca6f"
+   "id": "a2bcdd5d162aca6f",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
