first mac implem

--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:15.748839Z",
-     "start_time": "2024-08-22T06:39:15.745236Z"
+     "end_time": "2024-08-26T09:55:48.688375Z",
+     "start_time": "2024-08-26T09:55:48.684914Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 13
+   "execution_count": 23
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:15.802985Z",
-     "start_time": "2024-08-22T06:39:15.799168Z"
+     "end_time": "2024-08-26T09:55:48.736858Z",
+     "start_time": "2024-08-26T09:55:48.733207Z"
     }
    },
    "cell_type": "code",
@@ -45,13 +45,13 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 14
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:15.852418Z",
-     "start_time": "2024-08-22T06:39:15.847457Z"
+     "end_time": "2024-08-26T09:55:48.806904Z",
+     "start_time": "2024-08-26T09:55:48.801135Z"
     }
    },
    "cell_type": "code",
@@ -61,22 +61,67 @@
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "dataset_name = \"kvasir\"\n",
+    "#dataset_name = \"kvasir\"\n",
+    "#dataset_name = \"NucleiSeg\"\n",
+    "#dataset_name = \"URDE\"\n",
+    "dataset_name = \"isaid\"\n",
+    "#dataset_name = \"coco\"\n",
+    "\n",
     "model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "criteria = 'loss_dice'\n",
-    "perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']"
+    "\n",
+    "if dataset_name in [\"kvasir\", \"NucleiSeg\", \"URDE\"]:\n",
+    "    perf_metrics = ['dice_score', 'IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']\n",
+    "else:\n",
+    "    perf_metrics = ['IoU_score', 'precision_metric', 'recall_metric', 'accuracy_metric']"
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:15.920546Z",
-     "start_time": "2024-08-22T06:39:15.915359Z"
+     "end_time": "2024-08-26T09:55:48.853688Z",
+     "start_time": "2024-08-26T09:55:48.850210Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# def get_best_metrics(summary_loc: str, fold_nb: int, result_dict: dict, \n",
+    "#                      perf_metrics: list, criteria: str, num_params: int) -> int:\n",
+    "#     with open(summary_loc) as file:\n",
+    "#         data = json.load(file)\n",
+    "#         \n",
+    "#     if num_params == 0:\n",
+    "#         num_params = data['n_params']\n",
+    "#     data = data['test']\n",
+    "# \n",
+    "#     best_idx = np.argmin(data[criteria])\n",
+    "#     \n",
+    "#     fold_dict: dict = {}\n",
+    "#     for metric in perf_metrics:\n",
+    "#         fold_dict[metric] = data[metric][best_idx]\n",
+    "#     fold_dict['epoch'] = best_idx\n",
+    "#     \n",
+    "#     if fold_nb in result_dict:\n",
+    "#         raise KeyError(f\"Key '{fold_nb}' already present in dictionary.\")\n",
+    "#     \n",
+    "#     result_dict[fold_nb] = fold_dict\n",
+    "#     \n",
+    "#     return num_params"
+   ],
+   "id": "a617eb0c83072f4c",
+   "outputs": [],
+   "execution_count": 26
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-26T09:55:48.906557Z",
+     "start_time": "2024-08-26T09:55:48.898034Z"
     }
    },
    "cell_type": "code",
@@ -87,10 +132,19 @@
     "        data = json.load(file)\n",
     "        \n",
     "    if num_params == 0:\n",
-    "        num_params = data['n_params']\n",
-    "    data = data['test']\n",
+    "        num_params = data.get('n_params', 0)\n",
+    "    data = data.get('test', {})\n",
     "\n",
+    "    if criteria not in data or not data[criteria]:\n",
+    "        raise ValueError(f\"Criteria '{criteria}' is not in the data or has no values.\")\n",
+    "    \n",
     "    best_idx = np.argmin(data[criteria])\n",
+    "    \n",
+    "    if best_idx >= len(data[criteria]):\n",
+    "        raise IndexError(\"Calculated best index is out of bounds for the criteria list.\")\n",
+    "    \n",
+    "    if not all(len(data[metric]) == len(data[criteria]) for metric in perf_metrics):\n",
+    "        raise ValueError(\"Mismatch in length between criteria and performance metrics.\")\n",
     "    \n",
     "    fold_dict: dict = {}\n",
     "    for metric in perf_metrics:\n",
@@ -102,17 +156,17 @@
     "    \n",
     "    result_dict[fold_nb] = fold_dict\n",
     "    \n",
-    "    return num_params"
+    "    return num_params\n"
    ],
-   "id": "a617eb0c83072f4c",
+   "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:15.971600Z",
-     "start_time": "2024-08-22T06:39:15.968008Z"
+     "end_time": "2024-08-26T09:55:48.956190Z",
+     "start_time": "2024-08-26T09:55:48.951980Z"
     }
    },
    "cell_type": "code",
@@ -133,13 +187,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:16.050875Z",
-     "start_time": "2024-08-22T06:39:16.020486Z"
+     "end_time": "2024-08-26T09:55:49.044808Z",
+     "start_time": "2024-08-26T09:55:49.004814Z"
     }
    },
    "cell_type": "code",
@@ -178,31 +232,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/kvasir/UNet_e2cnn/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_bcnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_bcnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_bcnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_bcnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_bcnn/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/isaid/UNet_e2cnn/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 18
+   "execution_count": 29
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-22T06:39:16.085871Z",
-     "start_time": "2024-08-22T06:39:16.083933Z"
+     "end_time": "2024-08-26T09:55:49.092836Z",
+     "start_time": "2024-08-26T09:55:49.090325Z"
     }
    },
    "cell_type": "code",
