new params config

--- a/src/Benchmarks/analysis/mac_step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/mac_step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.477636Z",
-     "start_time": "2024-08-27T07:08:39.474738Z"
+     "end_time": "2024-08-27T07:03:01.197725Z",
+     "start_time": "2024-08-27T07:03:01.193507Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 37
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.501447Z",
-     "start_time": "2024-08-27T07:08:39.496365Z"
+     "end_time": "2024-08-27T07:03:01.248619Z",
+     "start_time": "2024-08-27T07:03:01.243773Z"
     }
    },
    "cell_type": "code",
@@ -45,29 +45,25 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 38
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.550785Z",
-     "start_time": "2024-08-27T07:08:39.545541Z"
+     "end_time": "2024-08-27T07:03:01.299776Z",
+     "start_time": "2024-08-27T07:03:01.292872Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "root_dir = '/home/rob/Documents/3_projects/bench/_results/small_models'\n",
-    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/small_models'\n",
+    "root_dir = '/home/rob/Documents/3_projects/mac/_results/'\n",
+    "output_dir_base_path = '/home/rob/Documents/3_projects/mac/_analysis'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
-    "#dataset_name = \"kvasir\"\n",
-    "#dataset_name = \"NucleiSeg\"\n",
-    "dataset_name = \"URDE\"\n",
-    "#dataset_name = \"isaid\"\n",
-    "#dataset_name = \"coco\"\n",
+    "dataset_name = \"kvasir\"\n",
     "\n",
-    "model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
+    "model_names = [\"vanilla\", \"mac\"]\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "criteria = 'loss_dice'\n",
@@ -79,13 +75,13 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 39
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.598753Z",
-     "start_time": "2024-08-27T07:08:39.595330Z"
+     "end_time": "2024-08-27T07:03:01.347821Z",
+     "start_time": "2024-08-27T07:03:01.343782Z"
     }
    },
    "cell_type": "code",
@@ -115,13 +111,13 @@
    ],
    "id": "a617eb0c83072f4c",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 40
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.649725Z",
-     "start_time": "2024-08-27T07:08:39.643690Z"
+     "end_time": "2024-08-27T07:03:01.401165Z",
+     "start_time": "2024-08-27T07:03:01.391731Z"
     }
    },
    "cell_type": "code",
@@ -160,13 +156,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 41
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.697825Z",
-     "start_time": "2024-08-27T07:08:39.693846Z"
+     "end_time": "2024-08-27T07:03:01.449720Z",
+     "start_time": "2024-08-27T07:03:01.445452Z"
     }
    },
    "cell_type": "code",
@@ -187,13 +183,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 42
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.809587Z",
-     "start_time": "2024-08-27T07:08:39.741992Z"
+     "end_time": "2024-08-27T07:03:01.524618Z",
+     "start_time": "2024-08-27T07:03:01.498720Z"
     }
    },
    "cell_type": "code",
@@ -221,6 +217,7 @@
     "    os.makedirs(output_path, exist_ok=True)\n",
     "    \n",
     "    json_name = f'/{dataset_name}_{model_name}_data.json'\n",
+    "    print(f'path to save: {output_path}{json_name}')\n",
     "    with open(f'{output_path}{json_name}', 'w') as fp:\n",
     "        json.dump(results, fp, default=str, indent=4)\n",
     "        \n",
@@ -232,36 +229,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/vanilla/fold_4/summary.json\n",
+      "path to save: /home/rob/Documents/3_projects/mac/_analysis/kvasir/kvasir_vanilla_data.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/mac/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/mac/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/mac/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/mac/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/mac/_results/kvasir/mac/fold_4/summary.json\n",
+      "path to save: /home/rob/Documents/3_projects/mac/_analysis/kvasir/kvasir_mac_data.json\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 43
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.820890Z",
-     "start_time": "2024-08-27T07:08:39.818507Z"
+     "end_time": "2024-08-27T07:03:01.555989Z",
+     "start_time": "2024-08-27T07:03:01.553083Z"
     }
    },
    "cell_type": "code",
    "source": "",
    "id": "a2bcdd5d162aca6f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-08-27T07:03:01.643771Z",
+     "start_time": "2024-08-27T07:03:01.641317Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "c47f7ae919a95cc9",
    "outputs": [],
    "execution_count": null
   }
