--- a/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
+++ b/src/Benchmarks/analysis/step_1-perf_comparison.ipynb
@@ -9,8 +9,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.477636Z",
-     "start_time": "2024-08-27T07:08:39.474738Z"
+     "end_time": "2024-08-30T07:00:56.963915Z",
+     "start_time": "2024-08-30T07:00:56.961349Z"
     }
    },
    "cell_type": "code",
@@ -22,7 +22,7 @@
    ],
    "id": "7749ec064416a5a8",
    "outputs": [],
-   "execution_count": 15
+   "execution_count": 22
   },
   {
    "metadata": {},
@@ -33,8 +33,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.501447Z",
-     "start_time": "2024-08-27T07:08:39.496365Z"
+     "end_time": "2024-08-30T07:00:56.985661Z",
+     "start_time": "2024-08-30T07:00:56.978202Z"
     }
    },
    "cell_type": "code",
@@ -45,29 +45,30 @@
    ],
    "id": "bb8cd9eb1fc259f1",
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 23
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.550785Z",
-     "start_time": "2024-08-27T07:08:39.545541Z"
+     "end_time": "2024-08-30T07:00:57.026100Z",
+     "start_time": "2024-08-30T07:00:57.023315Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "root_dir = '/home/rob/Documents/3_projects/bench/_results/small_models'\n",
-    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/small_models'\n",
+    "root_dir = '/home/rob/Documents/3_projects/bench/_results/large_models'\n",
+    "output_dir_base_path = '/home/rob/Documents/3_projects/bench/analysis/large_models'\n",
     "os.makedirs(output_dir_base_path, exist_ok=True)\n",
     "\n",
     "current_dir = os.getcwd()\n",
     "#dataset_name = \"kvasir\"\n",
     "#dataset_name = \"NucleiSeg\"\n",
-    "dataset_name = \"URDE\"\n",
-    "#dataset_name = \"isaid\"\n",
+    "#dataset_name = \"URDE\"\n",
+    "dataset_name = \"isaid\"\n",
     "#dataset_name = \"coco\"\n",
     "\n",
-    "model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
+    "#model_names = [\"UNet_vanilla\", \"UNet_bcnn\", \"UNet_e2cnn\"]\n",
+    "model_names = [\"UNet_vanilla\", \"UNet_e2cnn\"]\n",
     "\n",
     "folds = [f'fold_{i}' for i in range(5)]\n",
     "criteria = 'loss_dice'\n",
@@ -79,13 +80,13 @@
    ],
    "id": "initial_id",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.598753Z",
-     "start_time": "2024-08-27T07:08:39.595330Z"
+     "end_time": "2024-08-30T07:00:57.072180Z",
+     "start_time": "2024-08-30T07:00:57.069855Z"
     }
    },
    "cell_type": "code",
@@ -115,13 +116,13 @@
    ],
    "id": "a617eb0c83072f4c",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.649725Z",
-     "start_time": "2024-08-27T07:08:39.643690Z"
+     "end_time": "2024-08-30T07:00:57.120118Z",
+     "start_time": "2024-08-30T07:00:57.115903Z"
     }
    },
    "cell_type": "code",
@@ -160,13 +161,13 @@
    ],
    "id": "aba3c3ffe095f3b5",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.697825Z",
-     "start_time": "2024-08-27T07:08:39.693846Z"
+     "end_time": "2024-08-30T07:00:57.167123Z",
+     "start_time": "2024-08-30T07:00:57.163459Z"
     }
    },
    "cell_type": "code",
@@ -187,13 +188,13 @@
    ],
    "id": "60490ea8f8330b37",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 27
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.809587Z",
-     "start_time": "2024-08-27T07:08:39.741992Z"
+     "end_time": "2024-08-30T07:00:57.228947Z",
+     "start_time": "2024-08-30T07:00:57.210453Z"
     }
    },
    "cell_type": "code",
@@ -232,31 +233,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_vanilla/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_bcnn/fold_4/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_0/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_1/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_2/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_3/summary.json\n",
-      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/small_models/URDE/UNet_e2cnn/fold_4/summary.json\n"
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_vanilla/fold_4/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_0/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_1/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_2/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_3/summary.json\n",
+      "summary.json loc: /home/rob/Documents/3_projects/bench/_results/large_models/isaid/UNet_e2cnn/fold_4/summary.json\n"
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 28
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-27T07:08:39.820890Z",
-     "start_time": "2024-08-27T07:08:39.818507Z"
+     "end_time": "2024-08-30T07:00:57.265315Z",
+     "start_time": "2024-08-30T07:00:57.263529Z"
     }
    },
    "cell_type": "code",
